# voicebrief

./: .gitignore  AGENTS.md  FOSS_PLURALISM_MANIFESTO.md  LICENSE.txt  README.md  pyproject.toml  setpath.sh
devenv/: run_checks.py
images/: voicebrief.xcf  voicebrief_small.xcf
tests/: dummy_test.py  test_audio.py  test_cli.py
voicebrief/: __init__.py  __main__.py  app.py  audio.py  data.py  gptapi.py  gui.py  logging_utils.py  video.py
